AnalizadorParserParser.java
// Generated from AnalizadorParser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AnalizadorParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, NOES=56, NUMENTERO=57, NUMDECIMAL=58, TEXTO=59, 
		CONSTANTEID=60, ID=61, COMENTARIO_LINEA=62, COMENTARIO_BLOQUE=63, WS=64;
	public static final int
		RULE_programa = 0, RULE_sentencia = 1, RULE_lista_mostrar = 2, RULE_sentencia_si = 3, 
		RULE_sentencias = 4, RULE_declaracion = 5, RULE_id_item = 6, RULE_lista_expresiones = 7, 
		RULE_tipo = 8, RULE_expresion = 9, RULE_lista_expresiones_opt = 10, RULE_para_sentencia = 11, 
		RULE_inicializar_expr = 12, RULE_incre_decre = 13, RULE_segun_sentencia = 14, 
		RULE_caso = 15, RULE_caso_defecto = 16, RULE_hacer_mientras_sentencia = 17, 
		RULE_funcion = 18, RULE_parametros_opt = 19, RULE_lista_parametros = 20, 
		RULE_parametro = 21, RULE_llamada_funcion = 22, RULE_clase = 23, RULE_miembro = 24, 
		RULE_visibilidad = 25, RULE_tipo_retorno = 26, RULE_acceso_objeto = 27, 
		RULE_llamada_metodo = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "sentencia", "lista_mostrar", "sentencia_si", "sentencias", 
			"declaracion", "id_item", "lista_expresiones", "tipo", "expresion", "lista_expresiones_opt", 
			"para_sentencia", "inicializar_expr", "incre_decre", "segun_sentencia", 
			"caso", "caso_defecto", "hacer_mientras_sentencia", "funcion", "parametros_opt", 
			"lista_parametros", "parametro", "llamada_funcion", "clase", "miembro", 
			"visibilidad", "tipo_retorno", "acceso_objeto", "llamada_metodo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'comenzar'", "'terminar'", "'mostrar'", "'::'", "'leer'", "'mientras'", 
			"'('", "')'", "'{'", "'}'", "'igual'", "'a'", "'['", "']'", "'retornar'", 
			"'++'", "'--'", "','", "'si'", "'sino'", "'crear'", "'como'", "'constante'", 
			"'entero'", "'decimal'", "'doble'", "'texto'", "'logico'", "'falso'", 
			"'verdadero'", "'mayor'", "'que'", "'menor'", "'o'", "'yy'", "'oo'", 
			"'+'", "'-'", "'*'", "'/'", "'para'", "'segun'", "'caso'", "':'", "'romper'", 
			"'otro'", "'hacer'", "'funcion'", "'clase'", "'atributo'", "'metodo'", 
			"'publico'", "'privado'", "'.'", "'este'", "'noes'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "NOES", "NUMENTERO", 
			"NUMDECIMAL", "TEXTO", "CONSTANTEID", "ID", "COMENTARIO_LINEA", "COMENTARIO_BLOQUE", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AnalizadorParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AnalizadorParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public List<ClaseContext> clase() {
			return getRuleContexts(ClaseContext.class);
		}
		public ClaseContext clase(int i) {
			return getRuleContext(ClaseContext.class,i);
		}
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizadorParserListener ) ((AnalizadorParserListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizadorParserListener ) ((AnalizadorParserListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalizadorParserVisitor ) return ((AnalizadorParserVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__47 || _la==T__48) {
				{
				setState(60);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__48:
					{
					setState(58);
					clase();
					}
					break;
				case T__47:
					{
					setState(59);
					funcion();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			match(T__0);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2342019140801822824L) != 0)) {
				{
				{
				setState(66);
				sentencia();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public Lista_mostrarContext lista_mostrar() {
			return getRuleContext(Lista_mostrarContext.class,0);
		}
		public TerminalNode ID() { return getToken(AnalizadorParserParser.ID, 0); }
		public Acceso_objetoContext acceso_objeto() {
			return getRuleContext(Acceso_objetoContext.class,0);
		}
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public Sentencia_siContext sentencia_si() {
			return getRuleContext(Sentencia_siContext.class,0);
		}
		public Para_sentenciaContext para_sentencia() {
			return getRuleContext(Para_sentenciaContext.class,0);
		}
		public Segun_sentenciaContext segun_sentencia() {
			return getRuleContext(Segun_sentenciaContext.class,0);
		}
		public Hacer_mientras_sentenciaContext hacer_mientras_sentencia() {
			return getRuleContext(Hacer_mientras_sentenciaContext.class,0);
		}
		public Llamada_metodoContext llamada_metodo() {
			return getRuleContext(Llamada_metodoContext.class,0);
		}
		public Llamada_funcionContext llamada_funcion() {
			return getRuleContext(Llamada_funcionContext.class,0);
		}
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizadorParserListener ) ((AnalizadorParserListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizadorParserListener ) ((AnalizadorParserListener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalizadorParserVisitor ) return ((AnalizadorParserVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencia);
		int _la;
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				match(T__2);
				setState(75);
				lista_mostrar();
				setState(76);
				match(T__3);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				match(T__4);
				setState(81);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(79);
					match(ID);
					}
					break;
				case 2:
					{
					setState(80);
					acceso_objeto(0);
					}
					break;
				}
				setState(83);
				match(T__3);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				match(T__5);
				setState(85);
				match(T__6);
				setState(86);
				expresion(0);
				setState(87);
				match(T__7);
				setState(88);
				match(T__8);
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2342019140801822824L) != 0)) {
					{
					{
					setState(89);
					sentencia();
					}
					}
					setState(94);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(95);
				match(T__9);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				sentencia_si();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(98);
				match(ID);
				setState(99);
				match(T__10);
				setState(100);
				match(T__11);
				setState(101);
				expresion(0);
				setState(102);
				match(T__3);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(104);
				para_sentencia();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(105);
				segun_sentencia();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(106);
				hacer_mientras_sentencia();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(107);
				match(ID);
				setState(108);
				match(T__12);
				setState(109);
				expresion(0);
				setState(110);
				match(T__13);
				setState(111);
				match(T__10);
				setState(112);
				match(T__11);
				setState(113);
				expresion(0);
				setState(114);
				match(T__3);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(116);
				match(T__14);
				setState(117);
				expresion(0);
				setState(118);
				match(T__3);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(120);
				acceso_objeto(0);
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__10) {
					{
					setState(121);
					match(T__10);
					setState(122);
					match(T__11);
					setState(123);
					expresion(0);
					}
				}

				setState(126);
				match(T__3);
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(128);
				llamada_metodo();
				setState(129);
				match(T__3);
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(131);
				llamada_funcion();
				setState(132);
				match(T__3);
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(134);
				match(ID);
				setState(135);
				_la = _input.LA(1);
				if ( !(_la==T__15 || _la==T__16) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(136);
				match(T__3);
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(137);
				declaracion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lista_mostrarContext extends ParserRuleContext {
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public Lista_mostrarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista_mostrar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizadorParserListener ) ((AnalizadorParserListener)listener).enterLista_mostrar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizadorParserListener ) ((AnalizadorParserListener)listener).exitLista_mostrar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalizadorParserVisitor ) return ((AnalizadorParserVisitor<? extends T>)visitor).visitLista_mostrar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lista_mostrarContext lista_mostrar() throws RecognitionException {
		Lista_mostrarContext _localctx = new Lista_mostrarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_lista_mostrar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			expresion(0);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__17) {
				{
				{
				setState(141);
				match(T__17);
				setState(142);
				expresion(0);
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Sentencia_siContext extends ParserRuleContext {
		public Sentencia_siContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia_si; }
	 
		public Sentencia_siContext() { }
		public void copyFrom(Sentencia_siContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SiOnlyContext extends Sentencia_siContext {
		public SentenciasContext siBlock;
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public SiOnlyContext(Sentencia_siContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizadorParserListener ) ((AnalizadorParserListener)listener).enterSiOnly(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizadorParserListener ) ((AnalizadorParserListener)listener).exitSiOnly(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalizadorParserVisitor ) return ((AnalizadorParserVisitor<? extends T>)visitor).visitSiOnly(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SinoOnlyContext extends Sentencia_siContext {
		public SentenciasContext siBlock;
		public SentenciasContext sinoBlock;
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public List<SentenciasContext> sentencias() {
			return getRuleContexts(SentenciasContext.class);
		}
		public SentenciasContext sentencias(int i) {
			return getRuleContext(SentenciasContext.class,i);
		}
		public SinoOnlyContext(Sentencia_siContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizadorParserListener ) ((AnalizadorParserListener)listener).enterSinoOnly(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizadorParserListener ) ((AnalizadorParserListener)listener).exitSinoOnly(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalizadorParserVisitor ) return ((AnalizadorParserVisitor<? extends T>)visitor).visitSinoOnly(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sentencia_siContext sentencia_si() throws RecognitionException {
		Sentencia_siContext _localctx = new Sentencia_siContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sentencia_si);
		try {
			setState(168);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new SiOnlyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				match(T__18);
				setState(149);
				match(T__6);
				setState(150);
				expresion(0);
				setState(151);
				match(T__7);
				setState(152);
				match(T__8);
				setState(153);
				((SiOnlyContext)_localctx).siBlock = sentencias();
				setState(154);
				match(T__9);
				}
				break;
			case 2:
				_localctx = new SinoOnlyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				match(T__18);
				setState(157);
				match(T__6);
				setState(158);
				expresion(0);
				setState(159);
				match(T__7);
				setState(160);
				match(T__8);
				setState(161);
				((SinoOnlyContext)_localctx).siBlock = sentencias();
				setState(162);
				match(T__9);
				setState(163);
				match(T__19);
				setState(164);
				match(T__8);
				setState(165);
				((SinoOnlyContext)_localctx).sinoBlock = sentencias();
				setState(166);
				match(T__9);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciasContext extends ParserRuleContext {
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public SentenciasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizadorParserListener ) ((AnalizadorParserListener)listener).enterSentencias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizadorParserListener ) ((AnalizadorParserListener)listener).exitSentencias(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalizadorParserVisitor ) return ((AnalizadorParserVisitor<? extends T>)visitor).visitSentencias(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciasContext sentencias() throws RecognitionException {
		SentenciasContext _localctx = new SentenciasContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sentencias);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(170);
				sentencia();
				}
				}
				setState(173); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2342019140801822824L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public List<Id_itemContext> id_item() {
			return getRuleContexts(Id_itemContext.class);
		}
		public Id_itemContext id_item(int i) {
			return getRuleContext(Id_itemContext.class,i);
		}
		public TerminalNode CONSTANTEID() { return getToken(AnalizadorParserParser.CONSTANTEID, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizadorParserListener ) ((AnalizadorParserListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizadorParserListener ) ((AnalizadorParserListener)listener).exitDeclaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalizadorParserVisitor ) return ((AnalizadorParserVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracion);
		int _la;
		try {
			setState(197);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__20:
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				match(T__20);
				setState(176);
				match(T__21);
				setState(177);
				tipo();
				setState(178);
				id_item();
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__17) {
					{
					{
					setState(179);
					match(T__17);
					setState(180);
					id_item();
					}
					}
					setState(185);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(186);
				match(T__3);
				}
				break;
			case T__22:
				enterOuterAlt(_localctx, 2);
				{
				setState(188);
				match(T__22);
				setState(189);
				match(T__21);
				setState(190);
				tipo();
				setState(191);
				match(CONSTANTEID);
				setState(192);
				match(T__10);
				setState(193);
				match(T__11);
				setState(194);
				expresion(0);
				setState(195);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Id_itemContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(AnalizadorParserParser.ID, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public Lista_expresionesContext lista_expresiones() {
			return getRuleContext(Lista_expresionesContext.class,0);
		}
		public Id_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizadorParserListener ) ((AnalizadorParserListener)listener).enterId_item(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AnalizadorParserListener ) ((AnalizadorParserListener)listener).exitId_item(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AnalizadorParserVisitor ) return ((AnalizadorParserVisitor<? extends T>)visitor).visitId_item(this);
			else return visitor.visitChildren(this);
		}
	}
